log/build_2024-11-12_21-44-34/drone_delivery/stderr.log
  File "/home/loris/Documents/Projects/ROS2/drone_delivery/install/drone_delivery/lib/python3.12/site-packages/drone_delivery/drone_control.py", line 158
    if abs(gpsVal[0] - self.robot_target.linear.x) < 0.25
                                                         ^
SyntaxError: expected ':'

